testdata/baselines/reference/compiler/unicodeSpellingSuggestions.errors.txt
unicodeSpellingSuggestions.ts(3,1): error TS1435: Unknown keyword or identifier. Did you mean 'class'?
unicodeSpellingSuggestions.ts(3,1): error TS2304: Cannot find name 'classAé'.
unicodeSpellingSuggestions.ts(6,1): error TS1435: Unknown keyword or identifier. Did you mean 'class Aéé'?
unicodeSpellingSuggestions.ts(6,1): error TS2304: Cannot find name 'classAéé'.
unicodeSpellingSuggestions.ts(9,1): error TS1435: Unknown keyword or identifier. Did you mean 'class Aééé'?
unicodeSpellingSuggestions.ts(9,1): error TS2304: Cannot find name 'classAééé'.


==== unicodeSpellingSuggestions.ts (6 errors) ====
    // https://github.com/microsoft/typescript-go/issues/4223
    
    classAé {
    ~~~~~~~
!!! error TS1435: Unknown keyword or identifier. Did you mean 'class'?
    ~~~~~~~
!!! error TS2304: Cannot find name 'classAé'.
    }
    
    classAéé {
    ~~~~~~~~
!!! error TS1435: Unknown keyword or identifier. Did you mean 'class Aéé'?
    ~~~~~~~~
!!! error TS2304: Cannot find name 'classAéé'.
    }
    
    classAééé {
    ~~~~~~~~~
!!! error TS1435: Unknown keyword or identifier. Did you mean 'class Aééé'?
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'classAééé'.
    }
    